--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^6.4.8",
     "@types/exceljs": "^0.5.3",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.9.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.12.1",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
