--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "exceljs": "^4.4.0",
     "framer-motion": "^12.12.1",
     "html2pdf.js": "^0.10.3",
+    "jwt-decode": "^4.0.0",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
