--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.9.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.12.1",
+    "generate-password": "^1.7.1",
     "html2pdf.js": "^0.10.3",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^7.0.3",
