--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@mui/material": "^7.1.0",
     "@types/exceljs": "^0.5.3",
     "@types/nodemailer": "^6.4.17",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-pdf": "^6.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.9.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.12.1",
@@ -28,12 +32,14 @@
     "nodemailer": "^7.0.3",
     "notistack": "^3.0.2",
     "pdfjs-dist": "^3.4.120",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-pdf": "^7.1.2",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "react-zoom-pan-pinch": "^3.7.0",
+    "typescript": "^5.0.0",
+    "vite": "^6.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -42,17 +48,11 @@
     "@types/html2canvas": "^0.5.35",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^22.15.14",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-pdf": "^6.2.0",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "sass-embedded": "^1.86.0",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "typescript-eslint": "^8.24.1"
   }
 }
