--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^7.0.3",
     "notistack": "^3.0.2",
     "pdfjs-dist": "^3.4.120",
+    "picomatch": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.1.2",
@@ -40,7 +41,8 @@
     "react-zoom-pan-pinch": "^3.7.0",
     "typescript": "^5.0.0",
     "vite": "^6.2.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
