arreglando el lockfile denuevo

--- a/package.json
+++ b/package.json
@@ -12,47 +12,47 @@
     "start": "vite"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/lab": "^7.0.0-beta.12",
-    "@mui/material": "^7.1.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.10",
     "@types/exceljs": "^0.5.3",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-pdf": "^5.0.7",
-    "@vitejs/plugin-react": "^4.3.4",
-    "axios": "^1.9.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-pdf": "^5.7.4",
+    "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.6.7",
     "exceljs": "^4.4.0",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^11.0.3",
     "generate-password": "^1.7.1",
-    "html2pdf.js": "^0.10.3",
+    "html2pdf.js": "^0.10.1",
     "jwt-decode": "^4.0.0",
-    "nodemailer": "^7.0.3",
-    "notistack": "^3.0.2",
-    "pdfjs-dist": "^5.3.31",
+    "nodemailer": "^6.9.9",
+    "notistack": "^3.0.1",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^9.2.1",
-    "react-router-dom": "^7.4.0",
-    "react-toastify": "^11.0.5",
-    "react-zoom-pan-pinch": "^3.7.0",
-    "typescript": "^5.0.0",
-    "vite": "^6.2.0",
+    "react-pdf": "^7.7.0",
+    "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
+    "react-zoom-pan-pinch": "^3.3.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/axios": "^0.9.36",
-    "@types/html2canvas": "^0.5.35",
-    "@types/jspdf": "^1.3.3",
-    "@types/node": "^22.15.14",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "sass-embedded": "^1.86.0",
-    "typescript-eslint": "^8.24.1"
+    "@eslint/js": "^8.56.0",
+    "@types/axios": "^0.14.0",
+    "@types/html2canvas": "^1.0.0",
+    "@types/jspdf": "^2.0.0",
+    "@types/node": "^20.11.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^13.24.0",
+    "sass-embedded": "^1.71.0",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
